WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27724
[WML] <do> elements with a <noop> task shouldn't be exposed to the user
https://bugs.webkit.org/show_bug.cgi?id=27724
Summary
[WML] <do> elements with a <noop> task shouldn't be exposed to the user
Nikolas Zimmermann
Reported
2009-07-27 11:30:51 PDT
<do> elements with a <noop> tasks should be hidden. Affects manual-tests/wml/task-noop-in-do.wml
Attachments
Initial patch
(29.78 KB, patch)
2009-07-27 17:52 PDT
,
Nikolas Zimmermann
staikos
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2009-07-27 17:52:24 PDT
Created
attachment 33584
[details]
Initial patch
Nikolas Zimmermann
Comment 2
2009-07-28 05:47:50 PDT
Sending LayoutTests/ChangeLog Adding LayoutTests/fast/wml/task-noop-in-do.wml Adding LayoutTests/platform/mac/fast/wml/task-noop-in-do-expected.checksum Adding (bin) LayoutTests/platform/mac/fast/wml/task-noop-in-do-expected.png Adding LayoutTests/platform/mac/fast/wml/task-noop-in-do-expected.txt Sending WebCore/ChangeLog Deleting WebCore/manual-tests/wml/task-noop-in-do.wml Sending WebCore/wml/WMLNoopElement.cpp Transmitting file data ...... Committed revision 46474.
http://trac.webkit.org/changeset/46474
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug