2009-07-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

Reviewed by George Staikos.

        [WML] <do> elements with a <noop> task shouldn't be exposed to the user
        https://bugs.webkit.org/show_bug.cgi?id=27724

        Fix WMLNoopElement to disable it's parent WMLDoElement, as required by the spec.
        Moved manual-tests/wml/task-noop-in-do.wml to LayoutTests/fast/wml/task-noop-in-do.wml.

        * manual-tests/wml/task-noop-in-do.wml: Removed.
        * wml/WMLNoopElement.cpp:
        (WebCore::WMLNoopElement::insertedIntoDocument):

2009-07-28  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] <do> elements with a <noop> task shouldn't be exposed to the user
        https://bugs.webkit.org/show_bug.cgi?id=27724

        Add new layout test covering noop elements in do elements.

        * fast/wml/task-noop-in-do.wml: Copied from WebCore/manual-tests/wml/task-noop-in-do.wml.
        * platform/mac/fast/wml/task-noop-in-do-expected.checksum: Added.
        * platform/mac/fast/wml/task-noop-in-do-expected.png: Added.
        * platform/mac/fast/wml/task-noop-in-do-expected.txt: Added.



Canonical link: https://commits.webkit.org/38081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46474 268f45cc-cd09-0410-ab3c-d52691b4dbfc